--- a/CSSfile.css
+++ b/CSSfile.css
@@ -8,13 +8,13 @@ h1,
 
     font-family: 'Brush Script MT', cursive;
     font-size: 60px;
-    margin-left: 500px;
+    margin-left: 35%;
 }
 h2,
 .h2 {
-  margin-left: 700px;
+  margin-left: 40%;
 }
 h3,
 .h3 {
-  margin-left: 10px;
+  margin-left: 1%;
 }
